Sample app deployment wip

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -33,3 +33,29 @@
 	howpublished = {\url{https://github.com/martonorova/msc-onlab}},
 	title        = {Thesis repository (01/12/2021)},
 }
+
+@misc{Micrometer,
+	author       = {{Pivotal Software, Inc.}},
+	howpublished = {\url{https://micrometer.io/}},
+	title        = {Micrometer (02/12/2021)},
+}
+
+@misc{ActiveMQ,
+	author       = {{Apache}},
+	howpublished = {\url{https://activemq.apache.org/}},
+	title        = {Apache ActiveMQ (02/12/2021)},
+}
+
+@misc{MySQL,
+	author       = {{Oracle}},
+	howpublished = {\url{https://www.mysql.com/}},
+	title        = {MySQL (02/12/2021)},
+}
+
+
+
+
+
+
+
+
