--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -117,6 +117,10 @@ or Mean Time to Repair
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
+\subsubsection{ReplicaSet}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
 \subsubsection{Deployment}
 %----------------------------------------------------------------------------
 
