Finish sample app doc

--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -113,6 +113,10 @@ or Mean Time to Repair
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
+\subsubsection{Namespace}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
 \subsubsection{Pod}
 %----------------------------------------------------------------------------
 
@@ -125,7 +129,7 @@ or Mean Time to Repair
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsubsection{Service}
+\subsubsection{Service} \label{k8s-service}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
