--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -117,7 +117,7 @@ is it rather an implementation only section?
 \end{itemize}
 
 %----------------------------------------------------------------------------
-\subsection{Measurement}
+\subsection{Measurement} \label{measurement-impl}
 %----------------------------------------------------------------------------
 
 \begin{itemize}
@@ -127,6 +127,7 @@ is it rather an implementation only section?
 		\item Promethues Blackbox Exporter
 		\item Grafana
 	\end{itemize}
+	\item prometheus annotations, scrape config
 \end{itemize}
 
 %----------------------------------------------------------------------------
@@ -158,7 +159,7 @@ is it rather an implementation only section?
 \end{itemize}
 
 %----------------------------------------------------------------------------
-\subsection{Continuous Delivery}
+\subsection{CI/CD Pipeline} \label{cicd}
 %----------------------------------------------------------------------------
 
 \begin{itemize}
