Test framework doc in progress

--- a/docs/content/sample-application.tex
+++ b/docs/content/sample-application.tex
@@ -279,7 +279,7 @@ The importance of an mechanism that can determine if the backend is able to func
 \end{enumerate}
 
 %----------------------------------------------------------------------------
-\subsubsection{Interfaces}
+\subsubsection{Interfaces} \label{impl-backend-interfaces}
 %----------------------------------------------------------------------------
 
 The backend implements the interfaces described in section \ref{design-backend}.
