--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -47,6 +47,7 @@ A bevezető szokás szerint a diplomaterv felépítésével záródik, azaz anna
 
 \begin{itemize}
 	\item to make the results and the thinking easier to comprehend, the thesis in the following way
+	\item background
 	\item sample application - design and implementation - this will be used the demonstrate the features of the test framework
 	\item test framework
 	\item enhancements - alternatives to improve the dependability of the sample application
